--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,14 @@
-﻿@{
+﻿@model FolderDirectoryVM
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div>
+    <h2>Folder - @Model.PathText</h2>
+    @foreach (var item in Model.FolderDirectories)
+    {
+        var specSign = string.IsNullOrEmpty(Model.PathUrl) ? "" : "/";
+        var url = specSign + Model.PathUrl.Replace(item.Title, "") + specSign + item.Title;
+        <a href="@(url)">@(item.Title)</a><br>
+    }
 </div>
